--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit
-tensorflow
-opencv-python
-matplotlib
-numpy
-Pillow
+streamlit>=1.28.0
+tensorflow>=2.13.0
+numpy>=1.24.0
+opencv-python-headless>=4.8.0
+Pillow>=10.0.0
+matplotlib>=3.7.0
